added a code to pre-seed prisma db

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  "prisma": {
+    "seed" : "node prisma/seed.js"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -14,10 +17,12 @@
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.1",
+    "prisma": "^5.14.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.14.0",
     "autoprefixer": "^10.4.19",
     "nuxt-svgo": "^4.0.0",
     "postcss": "^8.4.38",
