--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "prisma": {
-    "seed" : "node prisma/seed.js"
+    "seed": "node prisma/seed.js"
   },
   "scripts": {
     "build": "nuxt build",
@@ -13,6 +13,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.7.0",
     "@nuxtjs/supabase": "^1.2.2",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
